assets/containers: add clearfix to paragraphs so floated items not overlaped fixes #2487

--- a/euth_wagtail/assets/scss/core/_containers.scss
+++ b/euth_wagtail/assets/scss/core/_containers.scss
@@ -31,7 +31,11 @@ body {
 
 img {
     max-width: 100%;
-    height: auto;
+    height: auto !important;
+}
+
+p {
+    @include clearfix; // stops overlap of img added via ckeditor and floated
 }
 
 @media (max-width: $screen-sm) {
